# sigma-mem

./: .gitignore  NOTICE  README.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
docs/: notation-reference.md  sigma-comm-protocol.md
src/sigma_mem/: dream.py  handlers.py  integrity.py  machine.py
tests/: test_bridge.py  test_dream.py  test_handlers.py  test_integrity.py  test_machine_integration.py  test_teams.py
