[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-mem"
version = "0.2.0"
description = "Persistent agent teams that learn across sessions — HATEOAS-navigated memory as an MCP server"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "Programming Language :: Python :: 3",
]
dependencies = [
    "hateoas-agent>=0.1.0",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
sigma-mem = "sigma_mem.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sigma_mem --cov-report=term-missing"

[tool.coverage.run]
source = ["sigma_mem"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
